# sdl3-gpu-experiments

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-native.yml  ci-windows.yml
res/shaders/: BasicProcTexture.comp  CommandBuild.comp  Cull.comp  Mandelbrot.comp  Noise3d.comp  PBR.frag  Particle.comp  Particle.frag  Particle.vert  ParticleForce.comp  ParticleIntegrate.comp  ParticleSingleBuffer.comp  ProcTexture.comp  ResetCounter.comp  SerializedPrefixSum.comp  TBN.vert  TextureColor.frag  TexturedCube.vert  TexturedQuad.vert  Tonemap.frag  Tonemap.vert  Triforce.vert  Uber.frag  Uber.vert
src/: SDL_gpu_shadercross.h  camera.cpp  geometry.cpp  geometry.hpp  helper.cpp  helper.hpp  image.cpp  image.hpp  main.cpp  rng.hpp  scene.cpp  scene.hpp
